fixed newsletter subscription alignment

--- a/style.css
+++ b/style.css
@@ -521,7 +521,7 @@ footer {
 		margin: 0;
 	}
 	.subscribe-message {
-		width: 40%;
+		width: 100%;
 	}
 }
 
